# projectAlpha

./: .coverage  .dockerignore  .env.example  .env.moe  .env.schema.json  .env.test  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTAINER_SECURITY.md  DETERMINISM_RESILIENCE_IMPLEMENTATION_SUMMARY.md  Dockerfile  FILE_REORGANIZATION_SUCCESS.md  FILE_REORGANIZATION_SUMMARY.md  GRACEFUL_DEGRADATION_SUMMARY.md  HRM_SYSTEM_STATUS.md  MoE_IMPLEMENTATION_SUMMARY.md  README.md  README_HRM_SYSTEM.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SLiM_AGENT_IMPLEMENTATION_SUMMARY.md  TYPE_SAFETY_FINAL_STATUS.md  TYPE_SAFETY_IMPLEMENTATION_SUMMARY.md  VOICE_INTEGRATION_COMPLETE.md  VSCODE_DRYRUN_IMPLEMENTATION_COMPLETE.md  VSCODE_PREP_COMPLETE.md  WEBAPP_IMPLEMENTATION_COMPLETE.md  comprehensive_code_review_report.py  comprehensive_verification_suite.py  core_arbiter.py  demo_moe_system.py  docker-compose.override.yml  docker-compose.yml  hrm_router.py  hrm_system_demo.py  pyproject.toml  requirements.production.txt  requirements.txt  requirements_graphrag.txt  requirements_integrations.txt  (+16 more)
.github/: copilot-instructions.md
Docs/: ADVANCED_FEATURES_DOCUMENTATION.md  ADVANCED_MODULES_IMPLEMENTATION_PLAN.md  AI_COMPANION_EMOTIONAL_SYSTEM_COMPLETE.md  AI_COUNCIL_SYSTEM_COMPLETE.md  ANCHOR_SETTINGS_INTEGRATION.md  COMPANION_UTILITY_DOCUMENTATION.md  COMPREHENSIVE_CODE_REVIEW_REPORT.md  COUNCIL_CORE_LOOP.md  COUNCIL_OF_MINDS_EVALUATION_MATRIX.md  CREATIVE_EVOLUTION_SCAFFOLDING.md  CouncilEvaluationMatrix.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_CLEANUP_SUMMARY.md  EMOTION_LOOP_ENHANCEMENT_SUMMARY.md  EMOTION_LOOP_FINAL_STRUCTURE.md  ENHANCED_IMPLEMENTATION_STATUS.md  INTIMACY_SYSTEM_COMPLETE.md  MEMORY_SYMBOL_VIEWER_SUMMARY.md  NEXT_STEPS_SUMMARY.md  ORGANIZATION_SUMMARY.md  PHASE3_DOCUMENTATION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_COMPLETE.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READY_ENHANCED_IMPLEMENTATION.md  PROJECT_COMPLETION_SUMMARY.md  README_COMPLETE_SYSTEM.md  README_CoreArbiter.md  README_DriftJournalRenderer.md  README_GraphRAG_Tool_Integration.md  README_HRM_SYSTEM.md  README_MemoryAndSymbolViewer.md  README_RitualSelectorPanel.md  REALTIME_INTEGRATION_SUMMARY.md  ROADMAP.md  SYSTEM_SUMMARY.md  TESTING_AND_POLISH_PLAN.md  UNIFIED_COMPANION_ARCHITECTURE.md  UNIFIED_IMPLEMENTATION_SUMMARY.md  USER_EXPERIENCE_JOURNEY.md  (+3 more)
agents/: __init__.py  base_agent.py  dream_loop.py  judge_agent.py  logic_loop.py  n8n_agent.py
backend/: ai_reformulator.py  anchor_system.py  app.py  bootstrap.py  core_arbiter_api.py  data_portability.py  drift_journal_api.py  goodbye_manager.py  hrm_api.py  hrm_module.py  hrm_router.py  main.py  memory_symbol_api.py  meta_watcher.py  personality_evolution.py  ritual_hooks.py  ritual_selector_api.py  subagent_router.py
common/: dryrun.py  logging_config.py
config/: anchor_settings.json  anchor_vows.json  core_config.py  council_manifest.json  drift_annotations.json  drift_config.json  environment_settings.json  journal_schedule.json  memory_rules.json  normal_thoughts.json  persona_prefs 2.json  personas.json  seed_emotions.json  settings.py  system_config.json  visual_triggers.json  voice_settings.json
core/: anchor_runtime.py  core_arbiter.py  council_coordinator.py  creative_discovery.py  emotion_engine.py  emotion_loop_core.py  emotional _loop_core.py  journal_core.py  llm_orchestrator.py  memory_core.py  memory_decay.py  memory_system.py  mirror_mode.py  mood_engine.py  normal_engine.py  persona_registry.py  persona_router.py  reflection_agent.py  reflection_integration.py  reward_engine.py  self_talk.py  symbolic_drift.py  test_suite.py  unified_companion.py
data/: active_rituals.json  active_symbols.json  anchor_state.json  collaboration_sessions.json  curiosity_discoveries.json  dreams.json  drift_history.json  drift_summary.json  emotion_training_backup.json  emotional_memory_trace.json  emotional_session_state.json  goal_partnerships.json  haptic_signal.json  hrm_config.json  identity_tether.json  internal_journal.json  investment_goals.json  investment_journal.json  investment_strategies.json  motivation_profiles.json  partnership_interactions.json  personality_config.json  presence_broadcast_log.json  ritual_history.json  ritual_offers.json  slim_agent_test_memory.json  symbol_memory.json  symbolic_map.json  ui_presence_signal.json  viz_data.json  voice_presence_signal.json
data_files/: tailwind.config.js
demos/: demo_complete_system.py  demo_drift_journal.py  demo_investment_tracker.py  demo_memory_symbol_viewer.py  demo_memory_viewer.html  demo_moe_system.py  demo_ritual_selector.py  demonstrate_ai_emotional_system.py  hrm_system_demo.py  simple_chat_demo.py  subagent_demo.py  unified_companion_demo.py
deployment/: README.md  deploy.sh  env.example  install-dependencies.sh  production_deployment.py
docker/: docker-compose.cluster.yml
documentation/: FILE_REORGANIZATION_COMPLETE.md  FILE_REORGANIZATION_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  IMPORT_GUIDE.md  MoE_IMPLEMENTATION_SUMMARY.md  MoE_INTEGRATION_GUIDE.md  RISK_MITIGATION_SUMMARY.md  SLiM_AGENT_IMPLEMENTATION_SUMMARY.md  VOICE_INTEGRATION_COMPLETE.md
emotion_logs/: anchor_insights.json  loop_result_20250804_231019.json  loop_results.jsonl
emotion_quant_autopilot/: __init__.py  autopilot_config.json  autopilot_config_backup.json  idle_monitor.py  quant_autopilot.py  setup_autopilot.py  test_autopilot.py
examples/: enhanced_conductor_models_demo.py  graphrag_tool_integration_demo.py  quick_test_chat.py  quick_test_metrics.py  quick_verification.py  simple_slim_test.py  slim_agent_demo.py  slim_agent_models_demo.py  subagent_integration.py
hrm/: policy_dsl.py
logs/: core_arbiter_trace.json  demo_strategic_models.jsonl  emotion_loop_history.jsonl
memory/: __init__.py  desire_registry.json  devotion_memory.json  emotion_tagger.py  enhanced_memory.json  graphrag_memory.py  long_term_memory.json  memory_graph.py  recall_engine.py  reflection_agent.py  salience_scoring.py  sensory_desires.json  short_term_memory.json  symbol_memory.py
(+977 files in other folders)
